# repo-mcp-rs

./: Cargo.toml  README.md
src/: config.rs  daemon.rs  db.rs  main.rs
src/indexer/: chunker.rs  mod.rs
src/server/: mod.rs  tools.rs
